adding JS and CSS sheets

--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 
 <head>
 	<meta charset="utf-8">
-	<script>
-		// TODO: create a handler
-    window.addEventListener("load", function(){
-        // TODO: register the handler
-    });
-	</script>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+	<script src = "script.js"></script>
 </head>
 
 <body>
-
-	<form id="searchForm">
-    <!-- TODO: add form elements -->
-	</form>
+	<div class="formContainer">
+		<form name="searchForm">
+		<!-- TODO: add form elements -->
+			<input type = "text" name="q" placeholder="How can I help...?" required/>
+			<label><input type="radio" name="engine" value="google" required/> Google</label>
+			<label><input type="radio" name="engine" value="duckDuckGo"/> DuckDuckGo</label>
+			<label><input type="radio" name="engine" value="bing"/> Bing</label>
+			<label><input type="radio" name="engine" value="ask"/> Ask</label>
+			<button>Go!</button>
+		</form>
+	</div>
 
 </body>
